# Linux-Camera

./: README.md
相机/camera/: CMakeLists.txt  README.md  build.sh
相机/camera/include/: common.h  gallery.h  jpeg_handler.h  lcd.h  touchscreen.h  v4l2_camera.h
相机/camera/lib/jpeg/lib/: libjpeg.la
相机/camera/lib/tslib/lib/: libts.la  libts.so.0
相机/camera/lib/tslib/lib/ts/: debounce.la  dejitter.la  evthres.la  iir.la  input.la  invert.la  linear.la  lowpass.la  median.la  pthres.la  skip.la  touchkit.la  variance.la  waveshare.la
相机/camera/src/: CMakeLists.txt  gallery.c  jpeg_handler.c  lcd.c  main.c  touchscreen.c  v4l2_camera.c
相机/camera/thirdlibs/: README.md
相机/camera/thirdlibs/jpeg-9b/: Makefile  cjpeg  config.status  djpeg  libjpeg.la  libtool  rdjpgcom
相机/camera/thirdlibs/tslib-1.21/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
相机/camera/thirdlibs/tslib-1.21/autom4te.cache/: output.1  requests  traces.0  traces.2
相机/camera/thirdlibs/tslib-1.21/doc/: Makefile  Makefile.in
相机/camera/thirdlibs/tslib-1.21/etc/: Makefile  Makefile.in
相机/camera/thirdlibs/tslib-1.21/plugins/: Makefile  Makefile.in  debounce.la  debounce.lo  dejitter.la  dejitter.lo  evthres.la  evthres.lo  iir.la  iir.lo  input-raw.lo  input.la  invert.la  invert.lo  linear.la  linear.lo  lowpass.la  lowpass.lo  median.la  median.lo  pthres.la  pthres.lo  skip.la  skip.lo  touchkit-raw.lo  touchkit.la  variance.la  variance.lo  waveshare-raw.lo  waveshare.la
相机/camera/thirdlibs/tslib-1.21/src/: Makefile  Makefile.in  libts.la  ts_attach.lo  ts_close.lo  ts_config.lo  ts_config_filter.lo  ts_error.lo  ts_fd.lo  ts_get_eventpath.lo  ts_load_module.lo  ts_open.lo  ts_option.lo  ts_parse_vars.lo  ts_read.lo  ts_read_raw.lo  ts_setup.lo  ts_strsep.lo  ts_version.lo
相机/camera/thirdlibs/tslib-1.21/tests/: Makefile  Makefile.in  ts_calibrate  ts_conf  ts_harvest  ts_print  ts_test  ts_test_mt
相机/camera/thirdlibs/tslib-1.21/tools/: Makefile  Makefile.in  ts_uinput
相机/根文件系统/rootfs/Picture/: 1.rgb  2.rgb  3.rgb  4.rgb  5.rgb  6.rgb
相机/根文件系统/rootfs/etc/: fstab  inittab  pointercal  profile  resolv.conf
相机/根文件系统/rootfs/imageplayer/: Makefile  imageplayer  imageplayer.code-workspace  main.c  run.sh
相机/设备树/: imx6ull-alientek-emmc.dts
(+65 files in other folders)
